--- a/index.html
+++ b/index.html
@@ -1,15 +1,18 @@
 <!DOCTYPE html>
 <html>
 <head>
+	<link rel="stylesheet" type="text/css" href="css/styles.css"/>
 	<title>Hello</title>
 </head>
 	<body>
-		<h1>Hi</h1>
-		<h2>Hi</h2>
-		<h3>Hi</h3>
-		<h4>Hi</h4>
-		<h5>Hi</h5>
-		<h6>Hi</h6>
-		<small>I like you</small>
+		<div>
+			<h1>Hi</h1>
+			<h2>Hi</h2>
+			<h3>Hi</h3>
+			<h4>Hi</h4>
+			<h5>Hi</h5>
+			<h6>Hi</h6>
+			<small>I like you</small>
+		</div>
 	</body>
 </html>
